Bug 449884 - Stop using mozIStorageConnection::GetLastInsertRowID It turns out that this is not a safe function to use at all when you start using the database connection on more than one thread.  It also does not work as expected when triggers are used to insert data into a database. r=dietrich